--- a/categories/templates/categories/home.html
+++ b/categories/templates/categories/home.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
     {% clear_breadcrumbs %}
-    {% breadcrumb 'Home' 'categories:index' %}
+    {% breadcrumb 'Home' 'subjects:home' %}
 {% endblock %}
 
 {% block style %}
