--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'categories/home.html' %}
 
 {% load static i18n permission_tags %}
 {% load django_bootstrap_breadcrumbs %}
