--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -59,6 +59,10 @@
 
 /* category app starts */
 
+.panel-invisible{
+  background-color: #BDBDBD;
+}
+
 .category-header > h4{
   float:left;
   margin-top: 0.5%;
