--- a/subjects/templates/subjects/create.html
+++ b/subjects/templates/subjects/create.html
@@ -93,10 +93,14 @@
 		{% endif %}
 		
 	{% endfor %}
-
+		<div class="row text-center">
+			<input type="submit" value="{% trans 'Save' %}" class="btn btn-primary btn-raised" />
+		</div>
 	</form>
 	</div>
 	</div>
+	<br clear="all" />
+	<br clear="all" />
 
 	<script type="text/javascript">
 		$('#id_professor').multiSelect({
