--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -97,10 +97,11 @@
                         {{category.description|safe}}
                     
                         {% if user in category.coordinators.all %}
-                        <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "create new subject" %} </button></a>
+                            <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "create new subject" %} </button></a>
                         {% endif %}
-                         <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
-                            {% for subject in category.subjects  %}
+                        
+                        <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
+                            {% for subject in category.subject_category.all  %}
                                 {% include "subjects/subject_card.html" %}
                             {% endfor %}
                         </div>
