fixed margin bottom create new subject button

--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -94,7 +94,7 @@
                         {{category.description|safe}}
                     
                         {% if user in category.coordinators.all %}
-                        <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "create new subject" %} </button></a>
+                        <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
                         {% endif %}
                          <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
                             {% for subject in category.subjects  %}
@@ -174,7 +174,7 @@
                         {{category.description|safe}}
                     
                         {% if user in category.coordinators.all %}
-                        <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "create new subject" %} </button></a>
+                        <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
                         {% endif %}
                          <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
                             {% for subject in category.subjects  %}
