--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -42,165 +42,131 @@
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             {% for category in categories  %}
                 {% if category.visible %}
-                  
-              
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-md-12 category-header">
-                                <h4 class="panel-title">
-                                    <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
-                                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
-                                    </a>
-                                </h4>
-                                {% if user.is_staff or user in category.coordinators.all %}
-                                    <div class=" divMoreActions">
-                                        <div class="btn-group">
-                                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                                            </button>
-                                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                                {% if user.is_staff %}
-                                                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                                {% endif %}
-                                                <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                                <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                                            </ul>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-md-12 category-header">
+                                    <h4 class="panel-title">
+                                        <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
+                                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
+                                        </a>
+                                    </h4>
+                                    {% if user.is_staff or user in category.coordinators.all %}
+                                        <div class=" divMoreActions">
+                                            <div class="btn-group">
+                                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                                                </button>
+                                                <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                                    {% if user.is_staff %}
+                                                        <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                                    {% endif %}
+                                                    <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                                    <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                                                </ul>
+                                            </div>
                                         </div>
-                                    </div>
-                                {% else %}
-                                    <div class=" divMoreActions">
-                                    </div>
-                                {% endif %}
-                                
+                                    {% else %}
+                                        <div class=" divMoreActions">
+                                        </div>
+                                    {% endif %}
+                                    
                                     <div class="col-md-5 pull-right category-card-items">
                                         <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                                     </div>
-                               
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
-                        <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
-                        <input type="hidden" class="log_id" value="" />
-                        {% if category.coordinators.all|length > 0  %}
-                            <h4><b>{% trans "Coordinator(s) " %}: </b>
-                                {{ category.coordinators.all|join:', ' }}
-                            </h4>
-                        {% else %}
-                            <h4> {% trans "It doesn't possess coordinators" %} </h4>
-                        {% endif %}
-                       
-                        {{category.description|safe}}
-                    
-                        {% if user in category.coordinators.all %}
-                            <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
-                        {% endif %}
+                        <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
+                            <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
+                            <input type="hidden" class="log_id" value="" />
+                            {% if category.coordinators.all|length > 0  %}
+                                <h4><b>{% trans "Coordinator(s) " %}: </b>
+                                    {{ category.coordinators.all|join:', ' }}
+                                </h4>
+                            {% else %}
+                                <h4> {% trans "It doesn't possess coordinators" %} </h4>
+                            {% endif %}
+                           
+                            {{category.description|safe}}
                         
-                        <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
-                            {% for subject in category.subject_category.all  %}
-                                {% include "subjects/subject_card.html" %}
-                            {% endfor %}
+                            {% if user in category.coordinators.all %}
+                                <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
+                            {% endif %}
+                            
+                            <div class="panel-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
+                                {% for subject in category.subject_category.all  %}
+                                    {% include "subjects/subject_card.html" %}
+                                {% endfor %}
+                            </div>
                         </div>
-                 
-                       
                     </div>
-
-                   
-                   
-                   
-                    {% comment %}
-                        <div id="{{category.slug}}" class="panel-collapse collapse">
-                            {% for subject in subjects %}
-                                {% include "categories/category_card.html" %}
-                            {% endfor %}
-                        </div>
-                    {% endcomment %}
-                </div>
-
                 {% elif request.user in category.coordinators.all %}
-
-              
-              
-                <div class="panel panel-danger">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-md-12 category-header">
-                                <h4 class="panel-title">
-                                    <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
-                                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
-                                    </a>
-                                </h4>
-                                {% if user.is_staff or user in category.coordinators.all %}
-                                    <div class=" divMoreActions">
-                                        <div class="btn-group">
-                                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                                            </button>
-                                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                                {% if user.is_staff %}
-                                                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                                {% endif %}
-                                                <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                                <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                                            </ul>
+                    <div class="panel panel-danger">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-md-12 category-header">
+                                    <h4 class="panel-title">
+                                        <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
+                                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
+                                        </a>
+                                    </h4>
+                                    {% if user.is_staff or user in category.coordinators.all %}
+                                        <div class=" divMoreActions">
+                                            <div class="btn-group">
+                                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                                                </button>
+                                                <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                                    {% if user.is_staff %}
+                                                        <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                                    {% endif %}
+                                                    <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                                    <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                                                </ul>
+                                            </div>
                                         </div>
-                                    </div>
-                                {% else %}
-                                    <div class=" divMoreActions">
-                                    </div>
-                                {% endif %}
-                                
+                                    {% else %}
+                                        <div class=" divMoreActions">
+                                        </div>
+                                    {% endif %}
+                                    
                                     <div class="col-md-5 pull-right category-card-items">
                                         <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                                     </div>
-                               
+                                </div>
+                            </div>
+                        </div>
+                        <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
+                            <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
+                            <input type="hidden" class="log_id" value="" />
+                            {% if category.coordinators.all|length > 0  %}
+                                <h4><b>{% trans "Coordinator(s) " %}: </b>
+                                    {{ category.coordinators.all|join:', ' }}
+                                </h4>
+                            {% else %}
+                                <h4> {% trans "It doesn't possess coordinators" %} </h4>
+                            {% endif %}
+                           
+                            {{category.description|safe}}
+                        
+                            {% if user in category.coordinators.all %}
+                                <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
+                            {% endif %}
+
+                            <div class="panel-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
+                                {% for subject in category.subject_category.all  %}
+                                    {% include "subjects/subject_card.html" %}
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
-                    <div id="{{category.slug}}" class="panel-collapse panel-body collapse category-panel-content">
-                        <input type="hidden" class="log_url" value="{% url 'categories:view_log' category.id %}" />
-                        <input type="hidden" class="log_id" value="" />
-                        {% if category.coordinators.all|length > 0  %}
-                            <h4><b>{% trans "Coordinator(s) " %}: </b>
-                                {{ category.coordinators.all|join:', ' }}
-                            </h4>
-                        {% else %}
-                            <h4> {% trans "It doesn't possess coordinators" %} </h4>
-                        {% endif %}
-                       
-                        {{category.description|safe}}
-                    
-                        {% if user in category.coordinators.all %}
-                            <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
-                        {% endif %}
-                         <div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
-                            {% for subject in category.subjects  %}
-                                {% include "subjects/subject_card.html" %}
-                            {% endfor %}
-                        </div>
-                 
-                       
-                    </div>
-
-                   
-                   
-                   
-                    {% comment %}
-                        <div id="{{category.slug}}" class="panel-collapse collapse">
-                            {% for subject in subjects %}
-                                {% include "categories/category_card.html" %}
-                            {% endfor %}
-                        </div>
-                    {% endcomment %}
-                </div>
-
                 {% endif %}
             {% endfor %}
         </div>
