--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -1,74 +1,62 @@
 {% load static i18n permission_tags %}
- <div class="panel panel-info">
-        <div class="panel-heading">
-                <div class="row">
-                    <div class="col-md-12 category-header">
-                        <h4 class="panel-title">
-                            <a class="category-course-link pull-left" data-parent="#subject-accordion" data-toggle="collapse" href="#{{subject.slug}}">
-                                <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{subject.name}}
-                            </a>
-                        </h4>
-                        
-                        {% if request.user in subject.professor.all or request.user in category.coordinators.all  %}
-                            <div class="divMoreActions" >
-                                <div class="btn-group">
-                                  <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                                  </button>
-                                  <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                    <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                    <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                    <li><a href="#"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                                  </ul>
-                                </div>
-                            </div>
-                        {% endif %}
-                            <div class="col-md-5 pull-right category-card-items">
-                                <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
-                                <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                                <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                                <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                            </div>
-                       
-                    </div>
-                </div>
-        </div>
 
- <div id="{{subject.slug}}" class="panel-collapse collapse category-panel-content">
+<div class="panel panel-info">
+    <div class="panel-heading">
+        <div class="row">
+            <div class="col-md-12 category-header">
+                <h4 class="panel-title">
+                    <a class="category-course-link pull-left" data-parent="#{{ subject.category.slug }}-accordion" data-toggle="collapse" href="#{{subject.slug}}">
+                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{subject.name}}
+                    </a>
+                </h4>
+                {% if request.user in subject.professor.all or request.user in category.coordinators.all  %}
+                    <div class="divMoreActions" >
+                        <div class="btn-group">
+                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                            </button>
+                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                <li><a href="#"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                {% endif %}
+                <div class="col-md-5 pull-right category-card-items">
+                    <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="{{subject.slug}}" class="panel-collapse collapse category-panel-content">
         <div class="row">
             <div class="col-md-6">
-            
-      
-        {% if subject.professor.all|length > 0  %}
-            <h4><b>{% trans "Professors(s) " %}: </b>
-                {{ subject.professor.all|join:', ' }}
-            </h4>
-        {% else %}
-            <h4> {% trans "It doesn't possess professors" %} </h4>
-        {% endif %}
-            </div>
-
-       
-            <div class="col-xs-6 col-md-3">
-              <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+                {% if subject.professor.all|length > 0  %}
+                    <h4><b>{% trans "Professors(s) " %}: </b>
+                        {{ subject.professor.all|join:', ' }}
+                    </h4>
+                {% else %}
+                    <h4> {% trans "It doesn't possess professors" %} </h4>
+                {% endif %}
             </div>
             <div class="col-xs-6 col-md-3">
-              <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
+                <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
             </div>
         </div>
-       
-       
-      
-       
-        <p>{{subject.description_brief|safe}}</p>
 
+        <p>{{subject.description_brief|safe}}</p>
                       
         {% if request.user in subject.students.all or request.user in subject.professor.all or quest.user.is_staff %}
             <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
         {% else %}
             <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
         {% endif %}
-         
-</div>
-
+    </div>
 </div>
