Adding pagination in manage categories

--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -1,6 +1,6 @@
 {% extends 'categories/home.html' %}
 
-{% load static i18n permission_tags pagination %}
+{% load static i18n pagination %}
 {% load django_bootstrap_breadcrumbs %}
 
 {% block javascript%}
