--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -70,7 +70,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'categories:index' %}">
+                <a class="navbar-brand" href="{% url 'subjects:home' %}">
                     <img class="logo pull-left" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo" />
                     <span class="pull-right project_name">Projeto Amadeus</span>
                 </a>
