--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -39,7 +39,7 @@
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             {% for category in categories  %}
                 {% if category.visible %}
-                    <div class="panel panel-info">
+                    <div class="panel panel-info category-panel">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-md-12 category-header">
@@ -48,27 +48,20 @@
                                             <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
                                         </a>
                                     </h4>
-                                    {% if user.is_staff or user in category.coordinators.all %}
-                                        <div class=" divMoreActions">
-                                            <div class="btn-group">
-                                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                                                </button>
-                                                <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                                    {% if user.is_staff %}
-                                                        <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                                    {% endif %}
-                                                    <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                                    <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    {% else %}
-                                        <div class=" divMoreActions">
-                                        </div>
-                                    {% endif %}
                                     
                                     <div class="col-md-5 pull-right category-card-items">
+                                        {% if user.is_staff or user in category.coordinators.all %}
+                                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                            </a>
+                                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                                {% if user.is_staff %}
+                                                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                                {% endif %}
+                                                <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                                <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                                            </ul>
+                                        {% endif %}
                                         <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                                         <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
@@ -95,7 +88,7 @@
                                 <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
                             {% endif %}
 
-                            <div class="panel-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
+                            <div class="panel-group subject-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
                                 {% for subject in category.subject_category.all  %}
                                     {% include "subjects/subject_card.html" %}
                                 {% endfor %}
@@ -103,7 +96,7 @@
                         </div>
                     </div>
                 {% elif request.user in category.coordinators.all or request.user.is_staff %}
-                    <div class="panel panel-invisible">
+                    <div class="panel panel-invisible special-panel">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-md-12 category-header">
@@ -112,33 +105,25 @@
                                             <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
                                         </a>
                                     </h4>
-                                    {% if user.is_staff or user in category.coordinators.all %}
-                                        <div class=" divMoreActions">
-                                            <div class="btn-group">
-                                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                                                </button>
-                                                <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                                                    {% if user.is_staff %}
-                                                        <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                                                    {% endif %}
-                                                    <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                                                    <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    {% else %}
-                                        <div class=" divMoreActions">
-                                        </div>
-                                    {% endif %}
-                                    
-                                        <div class="col-md-5 pull-right category-card-items">
-                                            <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
-                                            <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                                            <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                                            <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                                        </div>
-                                   
+
+                                    <div class="col-md-5 pull-right category-card-items">
+                                        {% if user.is_staff or user in category.coordinators.all %}
+                                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                            </a>
+                                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                                {% if user.is_staff %}
+                                                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                                {% endif %}
+                                                <li><a href="{% url 'categories:update' category.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                                <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                                            </ul>
+                                        {% endif %}
+                                        <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
+                                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +145,7 @@
                                 <a href="{% url 'subjects:create' category.slug %}"><button class="create-subject-btn"> {% trans "Create new subject" %} </button></a>
                             {% endif %}
                             
-                            <div class="panel-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
+                            <div class="panel-group subject-group" id="{{ category.slug }}-accordion" role="tablist" aria-multiselectable="true">
                                 {% for subject in category.subject_category.all  %}
                                     {% include "subjects/subject_card.html" %}
                                 {% endfor %}
