--- a/amadeus/templates/pagination.html
+++ b/amadeus/templates/pagination.html
@@ -1,4 +1,4 @@
-{% if page.paginator.count > 0 %}
+{% if paginator.count > 0 %}
 	<div class="row-fluid">
 		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
 		  	<ul class="pagination">
