--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 	<div id="" class="col-md-12">
-		<div class="users-cloud">
+		<div class="users-cloud div-users-cloud">
 			<ul class=" users-cloud">
 				{% for marker in markers %}
 					<li>{{marker.name}}</li>
