--- a/amadeus/templates/pagination.html
+++ b/amadeus/templates/pagination.html
@@ -2,11 +2,23 @@
 	<div class="row-fluid">
 		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
 		  	<ul class="pagination">
-		    	{% for page_number in paginator.page_range %}
+		  		{% if page_obj.has_previous %}
+			      	<li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+			    {% else %}
+			      	<li class="disabled"><span>&laquo;</span></li>
+			    {% endif %}
+		    	
+		    	{% for page_number in page_numbers %}
 		    		<li{% if page_obj.number == page_number %} class="active"{% endif %}>
 		        		<a href="?page={{ page_number }}{{ getvars }}">{{ page_number }}</a>
 		    		</li>
 		    	{% endfor %}
+		    	
+		    	{% if page_obj.has_next %}
+			      	<li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+			    {% else %}
+			      	<li class="disabled"><span>&raquo;</span></li>
+			    {% endif %}
 		  	</ul>
 		</div>
 	</div>
