Begin responsive adjusts

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -31,7 +31,7 @@
 }
 
 #sidebar-menu .item{
-    font-size: 45px;
+    font-size: 3vw;
     background-color: #26A69A;
     color: white;
     width: 80%;
