--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -45,6 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
 
 	<!-- Custom styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
 
 	<!--Javascript block for specific-app ones -->
@@ -76,7 +77,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
-                <div class="col-md-5 cards-content" id= 'NavBarSearch'>
+                <div class="col-sm-5 col-sm-offset-1 col-md-5 cards-content" id= 'NavBarSearch'>
                     <form id="SearchForm" action="#" method="get" accept-charset="utf-8">
                         <div class="input-group">
                             <div class="form-group is-empty" >
@@ -137,9 +138,10 @@
             </div>
         </div>
     {% endblock %}
+
     <div class="container-fluid">
         <div class="row">
-            <div id="sidebar-menu-div" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+            <div id="sidebar-menu-div" class="col-md-1 col-lg-1 hidden-xs hidden-sm">
                 {% block sidebar %}
                    <ul id="sidebar-menu">
                         <li class="item {{ subjects_menu_active }}" id="subjects-link" data-toggle="tooltip" data-placement="right" title="{% trans "Subjects" %}">
@@ -156,14 +158,13 @@
                         <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Pendencias" %}">
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                         </li>
-
                         <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Analytics" %}">
                             <i class="fa fa-bar-chart" aria-hidden="true"></i>
                         </li>
                    </ul>
                 {% endblock %}
             </div>
-            <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xl-11">
+            <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
                 {% block breadcrumbs %}
                     {% breadcrumb 'Home' 'home' %}
                 {% endblock %}
@@ -171,7 +172,7 @@
                     {% render_breadcrumbs %}
                 {% endblock %}
             </div>
-            <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xl-11">
+            <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11">
                 {% block content %}
                 {% endblock %}
             </div>
@@ -187,7 +188,7 @@
 
         /* Initialize tooltips*/
         $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
+            $('[data-toggle="tooltip"]').tooltip()
         });
     </script>
 </body>
