adding invisble choice for template

--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -98,8 +98,8 @@
                         </div>
                     </div>
                 {% elif request.user in category.coordinators.all %}
-                    <div class="panel panel-danger special-panel">
-                        <div class="panel-heading">
+                    <div class="panel  special-panel">
+                        <div class="panel-heading panel-invisible">
                             <div class="row">
                                 <div class="col-md-12 category-header">
                                     <h4 class="panel-title">
