--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -66,7 +66,7 @@
 /* category app starts */
 
 .panel-invisible{
-    background-color: #BDBDBD;
+    background-color: #4c4c4c !important;
 }
 
 .category-panel > .panel-heading {
