--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -96,8 +96,8 @@
                         </div>
                     </div>
                 {% elif request.user in category.coordinators.all or request.user.is_staff %}
-                    <div class="panel panel-invisible special-panel">
-                        <div class="panel-heading">
+                    <div class="panelspecial-panel">
+                        <div class="panel-heading  panel-invisible ">
                             <div class="row">
                                 <div class="col-md-12 category-header">
                                     <h4 class="panel-title">
