added support for invisible subjects

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -76,6 +76,10 @@
     padding: 2px 0px;
 }
 
+.subject-panel-invisible > .panel-heading{
+    padding: 2px 0px;
+}
+
 .subject-panel > .panel-heading {
     background-color: #039BE5 !important;
 }
