--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -1,7 +1,10 @@
 {% load static i18n permission_tags %}
-
+{% if subject.visible %}
 <div class="panel panel-info subject-panel">
     <div class="panel-heading">
+
+
+   
         <div class="row">
             <div class="col-md-12 category-header">
                 <h4 class="panel-title">
@@ -57,3 +60,65 @@
         {% endif %}
     </div>
 </div>
+ {% elif request.user in subject.professor.all or request.user in category.coordinators.all %}
+<div class="panel panel-info subject-panel-invisible">
+    <div class="panel-heading panel-invisible">
+
+
+
+        <div class="row">
+            <div class="col-md-12 category-header">
+                <h4 class="panel-title">
+                    <a class="category-course-link pull-left" data-parent="#{% if accordion_id %}{{ accordion_id }}{% else %}{{ subject.category.slug }}-accordion{% endif %}" data-toggle="collapse" href="#{{subject.slug}}">
+                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{subject.name}}
+                    </a>
+                </h4>
+
+                <div class="col-md-5 pull-right category-card-items">
+                    {% if request.user in subject.professor.all or request.user in category.coordinators.all  %}
+                        <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                        </a>
+                        <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                            <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                            <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                            <li><a href="#"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                        </ul>
+                    {% endif %}
+                    <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="{{subject.slug}}" class="panel-collapse collapse category-panel-content">
+        <div class="row">
+            <div class="col-md-6">
+                {% if subject.professor.all|length > 0  %}
+                    <h4><b>{% trans "Professors(s) " %}: </b>
+                        {{ subject.professor.all|join:', ' }}
+                    </h4>
+                {% else %}
+                    <h4> {% trans "It doesn't possess professors" %} </h4>
+                {% endif %}
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
+            </div>
+        </div>
+
+        <p>{{subject.description_brief|safe}}</p>
+                      
+        {% if request.user in subject.students.all or request.user in subject.professor.all or quest.user.is_staff %}
+            <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
+        {% else %}
+            <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
+        {% endif %}
+    </div>
+</div>
+{% endif  %}
