--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -23,6 +23,14 @@
   margin-left: 20%;
   width: 70%;
 }
+
+.my-subjects-title{
+  text-align: center;
+    font-family: Roboto;
+    font-size: 18px;
+    color: #26A69A;
+}
+
 /* initial page ends */
 /* sidebar menu */
 
