--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -77,8 +77,8 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
-                <div class="col-sm-5 col-sm-offset-1 col-md-5 cards-content" id= 'NavBarSearch'>
-                    <form id="SearchForm" action="#" method="get" accept-charset="utf-8">
+                <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 col-lg-7 col-lg-offset-1 text-center">
+                    <form id="SearchForm" action="#" method="get" accept-charset="utf-8" class="navbar-form">
                         <div class="input-group">
                             <div class="form-group is-empty" >
                                 <input type="text" class="form-control top-search" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search">
