modified Marker model to Tag model

--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -8,8 +8,8 @@
 
 		<div class="users-cloud div-users-cloud">
 			<ul class=" users-cloud">
-				{% for marker in markers %}
-					<li>{{marker.name}}</li>
+				{% for tag in tags %}
+					<li>{{tag.name}}</li>
 				{% endfor %}
 			</ul>
 		</div>
