--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -10,6 +10,10 @@
 		height: 30px;
 	}
 
+	.navbar-nav {
+		margin: 0px -15px;
+	}
+
 	.navbar-form {
 		margin-left: -30px;
 		margin-right: -30px;
@@ -17,6 +21,22 @@
 	
 	.navbar .navbar-form {
 		margin-top: 0px !important;
+	}
+
+	.navbar-form .input-group-btn > button > i {
+		margin-top: -5px;
+	}
+
+	.navbar .navbar-nav .dropdown .dropdown-menu {
+		margin-left: 0px;
+		padding: 0px;
+	}
+
+	.navbar .navbar-nav .dropdown .dropdown-menu li > a {
+		color: #333333 !important;
+	}
+	.navbar .navbar-nav .dropdown .dropdown-menu li > a:hover {
+	    color: #009688 !important;
 	}
 }
 
@@ -44,5 +64,12 @@
 
 	.navbar-form .input-group-btn {
 		width: 50px !important;
+	}
+
+	.navbar-nav li > a.profile {
+	    padding-top: 0px !important;
+	    padding-bottom:15px;
+	    padding-right:0px;
+	    padding-left: 0px;
 	}
 }
