--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -248,8 +248,6 @@
     color: white;
 }
 
-
-
 .navbar-nav li.open {
     background: #00695C;
 }
@@ -867,3 +865,47 @@ ul, li {
     border-bottom: 1px solid #D2D2D2;
 }
 /* End Profile */
+
+/* Bottom Menu */
+.clearfix {
+    height: 80px;
+}
+
+.bottom-menu {
+    position: fixed;
+    bottom: 0px;
+    background: #F5F5F5;
+    width: 100%;
+    padding: 15px 30px;
+    z-index: 999;
+}
+
+.mobile-menu {
+    -webkit-padding-start: 0px;
+}
+
+.mobile-menu, .mobile-menu li {
+    display: inline-block;
+}
+
+.mobile-menu .item {
+    color: #FFFFFF;
+    background: #26A69A;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 3px;
+    text-align: center;
+}
+
+.mobile-menu .item a{
+    color: white;
+}
+
+.mobile-menu > .subjects_menu_active {
+    background-color: #00695C;
+}
+
+.mobile-menu > .item:hover{
+    background-color: #00695C;
+}
+/* End Bottom Menu */
