--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -73,3 +73,27 @@
 	    padding-left: 0px;
 	}
 }
+
+@media(min-width: 541px) {
+	.mobile-menu .item {
+		font-size: 45px;
+		width: 70px;
+		height: 65px;
+	}
+
+	.bottom-menu {
+		height: 90px;
+	}
+}
+
+@media(max-width: 540px) {
+	.mobile-menu .item {
+		font-size: 35px;
+		width: 55px;
+		height: 50px;
+	}
+
+	.bottom-menu {
+		height: 80px;
+	}
+}
